# cpp-ai-sdk

./: .gitignore  API.md  CMakeLists.txt  README.md
code/cpp/: anthropic_client.cpp  context_manager.cpp  extended_models.cpp  google_client.cpp  http_client.cpp  models.cpp  oauth_manager.cpp  openai_client.cpp  realtime_client.cpp  websocket_client.cpp
code/header/: anthropic_client.hpp  context_manager.hpp  extended_models.hpp  google_client.hpp  http_client.hpp  oauth_manager.hpp  openai_client.hpp  realtime_client.hpp  types.hpp
code/header/ai_sdk/: extended_models.hpp  google_client.hpp  http_client.hpp
examples/: anthropic_example.cpp  google_access_token_example.cpp  google_example.cpp  google_oauth_example.cpp  openai_chat_example.cpp
include/ai_sdk/: anthropic_client.hpp  extended_models.hpp  http_client.hpp  models.hpp  openai_client.hpp  realtime_client.hpp  types.hpp  websocket_client.hpp
src/: anthropic_client.cpp  context_manager.cpp  extended_models.cpp  http_client.cpp  openai_client.cpp  realtime_client.cpp  websocket_client.cpp
test-server/: README.md  package-lock.json  package.json  server.js  test_comprehensive.cpp  test_sdk.cpp
test-server/routes/: anthropic.js  google.js  openai.js
